update zodiactail page.

--- a/projects/index.html
+++ b/projects/index.html
@@ -115,7 +115,7 @@
               <div class="item">
                 <img
                   src="../assets/projects/solidguard.png"
-                  alt="CylanceGUARD"
+                  alt="SolidGuard"
                 />
                 <div class="item-text">
                   <h2>SolidGuard</h2>
