Remove projects page.

--- a/contributions/index.html
+++ b/contributions/index.html
@@ -98,7 +98,7 @@
                 <img src="../assets/projects/tmes.png" alt="TMES" />
                 <div class="item-text">
                   <h2>Trend Micro Email Security</h2>
-                  <p>2024 - Current</p>
+                  <p>2024</p>
                   <p>
                     Currently developing backend log features + development
                     tools for the Email Security product. This product aims to
@@ -161,6 +161,29 @@
                 </div>
               </div>
               <div class="item">
+                <div class="item-text text-only">
+                  <h2>
+                    Want to see more?
+                  </h2>
+                  <p>Here are some other smaller projects (mostly unrelated to my main work) that I have done in the past:</p>
+                  <p>
+                    <a href="../zodiactail">
+                      Zodiac Tail: A Tale of Cat and Mouse
+                    </a>
+                    </p>
+                    <p>
+                    <a href="https://github.com/sit-n-coding/solidguard">
+                      SolidGuard
+                    </a>
+                  </p>
+                  <p>
+                    <a href="https://www.kaggle.com/code/magichanics/amateur-hour-using-headlines-to-predict-stocks/notebook">
+                      Amateur Hour: Using Headlines to Predict Stocks
+                    </a>
+                  </p>
+                </div>
+              </div>
+              <div class="item">
                 <div class="item-text">
                   <p>
                     <a href="../">Go Back</a>
@@ -183,8 +206,7 @@
               <h1>Jan Garong</h1>
               <p class="links web">
                 <a>Resume</a>&nbsp;&nbsp;
-                <a>Contributions</a>&nbsp;&nbsp;
-                <a>Projects</a>
+                <a>Contributions</a>
               </p>
             </div>
             <div class="link-icons">
@@ -238,8 +260,7 @@
             <h1>Jan Garong</h1>
             <p class="links web">
               <a>Resume</a>&nbsp;&nbsp;
-              <a>Contributions</a>&nbsp;&nbsp;
-              <a>Projects</a>
+              <a>Contributions</a>
             </p>
             <h2>Developed Cybersecurity Tools at</h2>
             <div class="company-list web">
