--- a/index.html
+++ b/index.html
@@ -69,8 +69,7 @@
               <h1>Jan Garong</h1>
               <p class="links web">
                 <a href="resume.pdf">Resume</a>&nbsp;&nbsp;
-                <a href="contributions">Contributions</a>&nbsp;&nbsp;
-                <a href="projects">Projects</a>
+                <a href="contributions">Contributions</a>
               </p>
             </div>
             <div class="link-icons">
@@ -125,8 +124,7 @@
             <h1>Jan Garong</h1>
             <p class="links web">
               <a href="resume.pdf">Resume</a>&nbsp;&nbsp;
-              <a href="contributions">Contributions</a>&nbsp;&nbsp;
-              <a href="projects">Projects</a>
+              <a href="contributions">Contributions</a>
             </p>
             <h2>Developed Cybersecurity Tools at</h2>
             <div class="company-list web">
