--- a/public/zodiactail/index.html
+++ b/public/zodiactail/index.html
@@ -11,20 +11,24 @@
   <body>
     <div>
       <button id="unity-fullscreen-button">Full Screen</button>
-      <a href="https://zodiactail.itch.io/prologue"><button>Download</button></a>
+      <a href="https://zodiactail.itch.io/prologue"
+        ><button>itch.io</button></a
+      >
     </div>
     <div>
-          <noscript>This game requires you to enable JavaScript.</noscript>
-          <canvas id="unity-canvas" width="1280" height="720"></canvas>
-          <div id="unity-loading-bar">
-            <div id="unity-logo"></div>
-            <div id="unity-progress-bar-empty">
-              <div id="unity-progress-bar-full"></div>
-            </div>
-          </div>
-          <div id="unity-warning"></div>
+      <noscript>
+        <h1>This game requires you to enable JavaScript.</h1>
+      </noscript>
+      <canvas id="unity-canvas" width="1280" height="720"></canvas>
+      <div id="unity-loading-bar">
+        <div id="unity-logo"></div>
+        <div id="unity-progress-bar-empty">
+          <div id="unity-progress-bar-full"></div>
         </div>
-        
+      </div>
+      <div id="unity-warning"></div>
+    </div>
+
     <script>
       var container = document.querySelector("#unity-container");
       var canvas = document.querySelector("#unity-canvas");
